레트로핏 설정 및 api 통해 근처 측정소 위치 데이터 받아오기 구현

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 KAKAO_API_KEY="b2dd5702d49f1950ef404b2b6e64d487"
+AIR_KOREA_SERVICE_KEY="EDtzaDhGVKlhLK2d5ywveBCTUvQsqeW3XY%2FuPsqI7cROUGRDZDI5Eo7PVT1onm9iYY9EN4rufih7mjTWKdM7XQ%3D%3D"
