--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
+    //lifecycle
+    implementation 'androidx.lifecycle:lifecycle-service:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+
+    //swiperefresh
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     //google play service
